Fix text alignment with pictures and clean styles.css

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -223,8 +223,10 @@ section:hover{
 }
 
 .about-text {
-	width: 500px;
+	width: 50%;
 	justify-content: center;
+	float:left;
+	margin-bottom: 5%;
 }
 
 .about-text span {
@@ -258,12 +260,13 @@ section:hover{
 }
 
 .about-image {
-	width: 450px;
+  width: 450px;
 	height: 500px;
+	margin-left: 200px;
 }
 
 .about-image img {
-	height: 100%;
+	height: auto;
 	width: 100%;
 	object-fit: contain;
 	object-position: center;
@@ -283,11 +286,16 @@ section:hover{
 	align-items: center;
 	justify-content: space-between;
   padding: 100px;
+	float: left;
 }
 
 .projects-text {
-	width: 500px;
+	width: 50%;
 	justify-content: center;
+	margin-bottom: 5%;
+}
+#projects-internal-text{
+	margin-top: 2%;
 }
 
 .projects-text span {
@@ -321,7 +329,7 @@ section:hover{
 }
 
 .projects-image {
-	width: 450px;
+	width: 40%;
 	height: 500px;
 }
 
@@ -372,17 +380,7 @@ section:hover{
 	left: 350px;
 }
 
-.about-image {
-	width: 450px;
-	height: 500px;
-}
 
-.about-image img {
-	height: auto;
-	width: 100%;
-	object-fit: contain;
-	object-position: center;
-}
 
 .slides-image {
 	width: 750px;
@@ -398,11 +396,17 @@ section:hover{
 
 #slides{
 	padding: auto ;
+	margin-left: 200px;
+	
 }
 
 /* Contact Section */
 #contact {
 	background-color: #fff;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	flex-direction: row;
 }
 
 .contact-heading {
@@ -418,13 +422,6 @@ section:hover{
 .contact-heading p {
 	color: #000000;
 	margin-bottom: 12px;
-}
-
-#contact {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	flex-direction: row;
 }
 
 
